--- a/src/main/resources/templates/page/service-visit.html
+++ b/src/main/resources/templates/page/service-visit.html
@@ -482,4 +482,15 @@
         });
     </script>
 </div>
+
+<div layout:fragment="script">
+    <script>
+        var app = new Vue({
+            el: "#app",
+            data: {
+
+            }
+        })
+    </script>
+</div>
 </html>
