--- a/src/main/resources/templates/page/service-status.html
+++ b/src/main/resources/templates/page/service-status.html
@@ -216,4 +216,15 @@
     </div>
     <!-- //contents -->
 </div>
+
+<div layout:fragment="script">
+    <script>
+        var app = new Vue({
+            el: "#app",
+            data: {
+
+            }
+        })
+    </script>
+</div>
 </html>
