--- a/src/main/resources/templates/page/shop-employees.html
+++ b/src/main/resources/templates/page/shop-employees.html
@@ -118,7 +118,7 @@
 
                 <div class="subHeader">
                     <div id="foldUnfold"><a href="#" class="btnFold"><span>좌측메뉴 접기/펴기</span></a></div>
-                    <h2 class="h2"><img src="../images/cmmn/hidden.png" class="ico-plus" alt="아이콘">직원관리</h2>
+                    <h2 class="h2"><img th:src="@{/images/cmmn/hidden.png}" class="ico-plus" alt="아이콘">직원관리</h2>
                     <div class="pageLocation">
                         <span>매장 관리</span>&gt;<strong>직원관리</strong>
                     </div>
@@ -359,7 +359,7 @@
     <div class="layerWrapper layerSizeM" id="popLayerEmployeeAdd" style="display:inherit !important">
         <div class="layerHeader">
             <strong>직원등록</strong>
-            <a href="#" class="btnClose popLayerEmployeeAdd_close"><img src="../images/cmmn/btn-layer-close.png"
+            <a href="#" class="btnClose popLayerEmployeeAdd_close"><img th:src="@{/images/cmmn/btn-layer-close.png}"
                                                                         alt="창닫기"></a>
         </div>
         <div class="layerContainer">
