--- a/src/main/resources/templates/page/shop-notice.html
+++ b/src/main/resources/templates/page/shop-notice.html
@@ -27,7 +27,7 @@
 
                 <div class="subHeader">
                     <div id="foldUnfold"><a href="#" class="btnFold"><span>좌측메뉴 접기/펴기</span></a></div>
-                    <h2 class="h2"><img src="../images/cmmn/hidden.png" class="ico-plus" alt="아이콘">공지사항관리</h2>
+                    <h2 class="h2"><img th:src="@{/images/cmmn/hidden.png}" class="ico-plus" alt="아이콘">공지사항관리</h2>
                     <div class="pageLocation">
                         <span>매장 관리</span>&gt;<strong>공지사항관리</strong>
                     </div>
@@ -376,7 +376,7 @@
     <div class="layerWrapper layerSizeL" id="popLayerNoticeAdd" style="display:inherit !important">
         <div class="layerHeader">
             <strong>공지사항 등록</strong>
-            <a href="#" class="btnClose popLayerNoticeAdd_close"><img src="../images/cmmn/btn-layer-close.png" alt="창닫기"></a>
+            <a href="#" class="btnClose popLayerNoticeAdd_close"><img th:src="@{/images/cmmn/btn-layer-close.png}" alt="창닫기"></a>
         </div>
         <div class="layerContainer">
             <div class="layerContent">
