--- a/src/main/resources/templates/page/shop-manage.html
+++ b/src/main/resources/templates/page/shop-manage.html
@@ -69,7 +69,7 @@
 
                 <div class="subHeader">
                     <div id="foldUnfold"><a href="#" class="btnFold"><span>좌측메뉴 접기/펴기</span></a></div>
-                    <h2 class="h2"><img src="../images/cmmn/hidden.png" class="ico-list" alt="아이콘">매장정보 관리
+                    <h2 class="h2"><img th:src="@{/images/cmmn/hidden.png}" class="ico-list" alt="아이콘">매장정보 관리
                     </h2>
                     <div class="pageLocation">
                         <span>매장 관리</span>&gt;<strong>매장정보관리</strong>
@@ -251,7 +251,7 @@
     <div class="layerWrapper layerSizeM" id="popLayerDaumPostcodeSrch" style="display:inherit !important;">
         <div class="layerHeader">
             <strong>우편번호 찾기</strong>
-            <a href="#" class="btnClose popLayerDaumPostcodeSrch_close"><img src="../images/cmmn/btn-layer-close.png"
+            <a href="#" class="btnClose popLayerDaumPostcodeSrch_close"><img th:src="@{/images/cmmn/btn-layer-close.png}"
                                                                              alt="창닫기"></a>
         </div>
         <div class="layerContainer" style="display: inline-block;">
